PLATUI-481 - Update scanners

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -84,296 +84,442 @@ zap-automation-config {
   scanners : {
     passive : [
          {
-            id : 2
-            name : Private IP Disclosure
+           id : 2
+           name : Private IP Disclosure
          }
          {
-            id : 3
-            name: Session ID in URL Rewrite
+           id : 3
+           name : Session ID in URL Rewrite
          }
          {
-            id : 10010
-            name: Cookie No HttpOnly Flag
+           id : 10010
+           name : Cookie No HttpOnly Flag
          }
          {
-            id : 10011
-            name: Cookie Without Secure Flag
+           id : 10011
+           name : Cookie Without Secure Flag
          }
          {
-            id : 10015
-            name : Incomplete or No Cache-control and Pragma HTTP Header Set
+           id : 10015
+           name : Incomplete or No Cache-control and Pragma HTTP Header Set
          }
          {
-            id : 10016
-            name : Web Browser XSS Protection Not Enabled
+           id : 10016
+           name : Web Browser XSS Protection Not Enabled
          }
          {
-            id : 10017
-            name: Cross-Domain JavaScript Source File Inclusion
+           id : 10017
+           name : Cross-Domain JavaScript Source File Inclusion
          }
          {
-            id : 10019
-            name : Content-Type Header Missing
+           id : 10019
+           name : Content-Type Header Missing
          }
          {
-            id : 10020
-            name : X-Frame-Options Header Scanner
+           id : 10020
+           name : X-Frame-Options Header Scanner
          }
          {
-            id : 10021
-            name : X-Content-Type-Options Header Missing
+           id : 10021
+           name : X-Content-Type-Options Header Missing
          }
          {
-            id : 10023
-            name : Information Disclosure - Debug Error Messages
+           id : 10023
+           name : Information Disclosure - Debug Error Messages
          }
          {
-            id : 10024
-            name : Information Disclosure - Sensitive Informations in URL
+           id : 10024
+           name : Information Disclosure - Sensitive Information in URL
          }
          {
-            id : 10025
-            name : Information Disclosure - Sensitive Information in HTTP Referrer Header
+           id : 10025
+           name : Information Disclosure - Sensitive Information in HTTP Referrer Header
          }
          {
-            id : 10026
-            name : HTTP Parameter Override
+           id : 10026
+           name : HTTP Parameter Override
          }
          {
-            id : 10027
-            name : Information Disclosure - Suspicious Comments
+           id : 10027
+           name : Information Disclosure - Suspicious Comments
          }
          {
-            id : 10032
-            name : Viewstate Scanner
+           id : 10028
+           name : Open Redirect
          }
          {
-            id : 10037
-            name : "Server Leaks Information via \"X-Powered-By\" HTTP Response Header Field(s)"
-         }
-#   This Scanner needs to be reviewed by PlatSec before enabling it.
-#         {
-#            id : 10054
-#            name : Cookie Without SameSite Attribute
-#         }
-#   This scanner needs to be fine tuned before enabling its alerts
-#         {
-#            id : 10055
-#            name : Content Security Policy Scanner
-#         }
-         {
-            id : 10056
-            name : X-Debug-Token Information Leak
+           id : 10029
+           name : Cookie Poisoning
          }
          {
-            id : 10057
-            name : Username Hash Found
+           id : 10030
+           name : User Controllable Charset
          }
          {
-            id : 10061
-            name : X-AspNet-Version Response Header Scanner
-         }
-#   Reveiewed with PlatSec and agreed to disable the alerts from this scanner.
-#   Severity is only informational and introduces a lot of noise.
-#         {
-#            id : 10096
-#            name : Timestamp Disclosure
-#         }
-         {
-            id : 10098
-            name : Cross-Domain Misconfiguration
+           id : 10031
+           name : User Controllable HTML Element Attribute (Potential XSS)
          }
          {
-            id : 10105
-            name : Weak Authentication Method
+           id : 10032
+           name : Viewstate Scanner
          }
          {
-            id : 10202
-            name : Absence of Anti-CSRF Tokens
+           id : 10033
+           name : Directory Browsing
          }
          {
-            id : 10040
-            name : Secure Pages Include Mixed Content
+           id : 10034
+           name : Heartbleed OpenSSL Vulnerability (Indicative)
          }
          {
-            id : 50001
-            name : Script Passive Scan Rules
+           id : 10035
+           name : Strict-Transport-Security Header Scanner
          }
          {
-            id : 50003
-            name : Stats Passive Scan Rule
+           id : 10036
+           name : HTTP Server Response Header Scanner
          }
          {
-            id : 90001
-            name : Insecure JSF ViewState
+           id : 10037
+           name : "Server Leaks Information via \"X-Powered-By\" HTTP Response Header Field(s)"
          }
          {
-            id : 90011
-            name : Charset Mismatch
+           id : 10038
+           name : Content Security Policy (CSP) Header Not Set
          }
          {
-            id : 90022
-            name : Application Error Disclosure
+           id : 10039
+           name : X-Backend-Server Header Information Leak
          }
          {
-            id : 322420463
-            name : Retire.js
+           id : 10040
+           name : Secure Pages Include Mixed Content
+         }
+         {
+           id : 10041
+           name : HTTP to HTTPS Insecure Transition in Form Post
+         }
+         {
+           id : 10042
+           name : HTTPS to HTTP Insecure Transition in Form Post
+         }
+         {
+           id : 10043
+           name : User Controllable JavaScript Event (XSS)
+         }
+         {
+           id : 10044
+           name : Big Redirect Detected (Potential Sensitive Information Leak)
+         }
+         {
+           id : 10050
+           name : Retrieved from Cache
+         }
+         {
+           id : 10052
+           name : X-ChromeLogger-Data (XCOLD) Header Information Leak
+         }
+         #   This Scanner needs to be reviewed by PlatSec before enabling it.
+         #         {
+         #            id : 10054
+         #            name : Cookie Without SameSite Attribute
+         #         }
+         #   This scanner needs to be fine tuned before enabling its alerts
+         #         {
+         #            id : 10055
+         #            name : Content Security Policy Scanner
+         #         }
+         {
+           id : 10056
+           name : X-Debug-Token Information Leak
+         }
+         {
+           id : 10057
+           name : Username Hash Found
+         }
+         {
+           id : 10061
+           name : X-AspNet-Version Response Header Scanner
+         }
+         {
+           id : 10062
+           name : PII Scanner
+         }
+         #   Reveiewed with PlatSec and agreed to disable the alerts from this scanner.
+         #   Severity is only informational and introduces a lot of noise.
+         #         {
+         #            id : 10096
+         #            name : Timestamp Disclosure
+         #         }
+         {
+           id : 10097
+           name : Hash Disclosure
+         }
+         {
+           id : 10098
+           name : Cross-Domain Misconfiguration
+         }
+         {
+           id : 10105
+           name : Weak Authentication Method
+         }
+         {
+           id : 10108
+           name : Reverse Tabnabbing
+         }
+         {
+           id : 10202
+           name : Absence of Anti-CSRF Tokens
+         }
+         {
+           id : 50001
+           name : Script Passive Scan Rules
+         }
+         {
+           id : 50003
+           name : Stats Passive Scan Rule
+         }
+         {
+           id : 90001
+           name : Insecure JSF ViewState
+         }
+         {
+           id : 90011
+           name : Charset Mismatch
+         }
+         {
+           id : 90022
+           name : Application Error Disclosure
+         }
+         {
+           id : 90033
+           name : Loosely Scoped Cookie
+         }
+         {
+           id : 322420463
+           name : Retire.js
          }
     ],
     active = [
         {
-            id : 0
-            name : Directory Browsing
+          id : 0
+          name : Directory Browsing
         }
         {
-            id : 6
-            name : Path Traversal
+          id : 6
+          name : Path Traversal
         }
         {
-            id : 7
-            name : Remote File Inclusion
+          id : 7
+          name : Remote File Inclusion
         }
         {
-            id : 42
-            name : Source Code Disclosure - SVN
+          id : 41
+          name : Source Code Disclosure - Git
         }
         {
-            id : 10045
-            name : Source Code Disclosure - /WEB-INF folder
+          id : 42
+          name : Source Code Disclosure - SVN
         }
         {
-            id : 10048
-            name : Remote Code Execution - Shell Shock
-        }
-        {   id : 10095
-            name: Backup File Disclosure
+          id : 43
+          name : Source Code Disclosure - File Inclusion
         }
         {
-            id : 20012
-            name: Anti CSRF Tokens Scanner
+          id : 10045
+          name : Source Code Disclosure - /WEB-INF folder
         }
         {
-            id : 20014
-            name : HTTP Parameter Pollution scanner
+          id : 10047
+          name : HTTPS Content Available via HTTP
         }
         {
-            id : 20015
-            name : Heartbleed OpenSSL Vulnerability
+          id : 10048
+          name : Remote Code Execution - Shell Shock
         }
         {
-            id : 20016
-            name : Cross-Domain Misconfiguration
+          id : 10051
+          name : Relative Path Confusion
         }
         {
-            id : 20017
-            name : Source Code Disclosure - CVE-2012-1823
+          id : 10053
+          name : Apache Range Header DoS (CVE-2011-3192)
         }
         {
-            id : 20018
-            name : Remote Code Execution - CVE-2012-1823
+          id : 10058
+          name : GET for POST
         }
         {
-            id : 20019
-            name : External Redirect
+          id : 10095
+          name : Backup File Disclosure
         }
         {
-            id : 30001
-            name : Buffer Overflow
+          id : 10104
+          name : User Agent Fuzzer
         }
         {
-            id : 30002
-            name : Format String Error
+          id : 10106
+          name : HTTP Only Site
         }
         {
-            id : 30003
-            name : Integer Overflow Error
+          id : 10107
+          name : Httpoxy - Proxy Header Misuse
         }
         {
-            id : 40003
-            name: CRLF Injection
+          id : 20012
+          name : Anti CSRF Tokens Scanner
         }
         {
-            id : 40008
-            name : Parameter Tampering
+          id : 20014
+          name : HTTP Parameter Pollution scanner
         }
         {
-            id : 40009
-            name : Server Side Include
+          id : 20015
+          name : Heartbleed OpenSSL Vulnerability
         }
         {
-            id : 40012
-            name : Cross Site Scripting (Reflected)
+          id : 20016
+          name : Cross-Domain Misconfiguration
         }
         {
-            id : 40013
-            name : Session Fixation
+          id : 20017
+          name : Source Code Disclosure - CVE-2012-1823
         }
         {
-            id : 40014
-            name : Cross Site Scripting (Persistent)
-        }
-        {   id : 40016
-            name : Cross Site Scripting (Persistent) - Prime
+          id : 20018
+          name : Remote Code Execution - CVE-2012-1823
         }
         {
-            id  : 40017
-            name : Cross Site Scripting (Persistent) - Spider
+          id : 20019
+          name : External Redirect
         }
         {
-            id : 40018
-            name : SQL Injection
+          id : 30001
+          name : Buffer Overflow
         }
         {
-            id : 40019
-            name : SQL Injection - MySQL
+          id : 30002
+          name : Format String Error
         }
         {
-            id : 40020
-            name : SQL Injection - Hypersonic SQL
+          id : 30003
+          name : Integer Overflow Error
         }
         {
-            id : 40021
-            name : SQL Injection - Oracle
+          id : 40003
+          name : CRLF Injection
         }
         {
-            id : 40022
-            name : SQL Injection - PostgreSQL
+          id : 40008
+          name : Parameter Tampering
         }
         {
-            id : 40023
-            name : Possible Username Enumeration
+          id : 40009
+          name : Server Side Include
         }
         {
-            id : 50000
-            name : Script Active Scan Rules
+          id : 40012
+          name : Cross Site Scripting (Reflected)
         }
         {
-            id : 90019
-            name : Server Side Code Injection
+          id : 40013
+          name : Session Fixation
         }
         {
-            id : 90020
-            name : Remote OS Command Injection
+          id : 40014
+          name : Cross Site Scripting (Persistent)
         }
         {
-            id : 90021
-            name : XPath Injection
+          id : 40016
+          name : Cross Site Scripting (Persistent) - Prime
         }
         {
-            id : 90023
-            name : XML External Entity Attack
+          id : 40017
+          name : Cross Site Scripting (Persistent) - Spider
         }
         {
-            id : 90024
-            name : Generic Padding Oracle
+          id : 40018
+          name : SQL Injection
         }
         {
-            id : 90025
-            name : Expression Language Injection
+          id : 40019
+          name : SQL Injection - MySQL
         }
         {
-            id : 90028
-            name : Insecure HTTP Method
+          id : 40020
+          name : SQL Injection - Hypersonic SQL
+        }
+        {
+          id : 40021
+          name : SQL Injection - Oracle
+        }
+        {
+          id : 40022
+          name : SQL Injection - PostgreSQL
+        }
+        {
+          id : 40023
+          name : Possible Username Enumeration
+        }
+        {
+          id : 40024
+          name : SQL Injection - SQLite
+        }
+        {
+          id : 40025
+          name : Proxy Disclosure
+        }
+        {
+          id : 40027
+          name : SQL Injection - MsSQL
+        }
+        {
+          id : 40028
+          name : ELMAH Information Leak
+        }
+        {
+          id : 40029
+          name : Trace.axd Information Leak
+        }
+        {
+          id : 40032
+          name : .htaccess Information Leak
+        }
+        {
+          id : 50000
+          name : Script Active Scan Rules
+        }
+        {
+          id : 90019
+          name : Server Side Code Injection
+        }
+        {
+          id : 90020
+          name : Remote OS Command Injection
+        }
+        {
+          id : 90021
+          name : XPath Injection
+        }
+        {
+          id : 90023
+          name : XML External Entity Attack
+        }
+        {
+          id : 90024
+          name : Generic Padding Oracle
+        }
+        {
+          id : 90025
+          name : Expression Language Injection
+        }
+        {
+          id : 90027
+          name : Cookie Slack Detector
+        }
+        {
+          id : 90028
+          name : Insecure HTTP Method
         }
     ]
    }
